CSS for previous commit

--- a/css/twic.css
+++ b/css/twic.css
@@ -1,43 +1,61 @@
-body {
-  background-color:#4C0066;
-  font-size: 20;
-  font-family: Archer;
-}
-
-.node {
-  stroke-width: 1.5px;
-}
-
-.link {
-  stroke: #fff;
-  stroke-opacity: .6;
-}
-
-.d3-tip {
-  line-height: 1;
-  font-weight: bold;
-  padding: 12px;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  border-radius: 2px;
-}
-
-/* Creates a small triangle extender for the tooltip */
-/*.d3-tip:after {
-  box-sizing: border-box;
-  display: inline;
-  font-size: 10px;
+html {
+  margin: 0px;
   width: 100%;
-  line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
-  content: "\25BC";
-  position: absolute;
-  text-align: center;
-}*/
+  min-height: 100%;
+}
 
-/* Style northward tooltips differently */
-.d3-tip.n:after {
-  margin: -1px 0 0 0;
-  top: 100%;
-  left: 0;
+body {
+  margin: 0px;
+  width: 100%;
+  min-height: 100%;
+}
+
+.twic_panel {
+  border-radius: 15px;
+  position: absolute;
+}
+
+.div_twic_graph {
+  margin-left: auto;
+  margin-right: auto;
+  overflow: auto;
+}
+
+.rect_twic_graph {
+  fill: white;
+}
+
+.group_twic_graph_overlay {
+  fill: none;
+  pointer-events: all;
+}
+
+.div_twic_info {
+  margin-left: auto;
+  margin-right: auto;
+  overflow: auto;
+}
+
+.div_twic_info_topicbar {
+  background-color: #002240;
+  border-radius: 15px;
+}
+
+.svg_twic_info {
+  overflow: scroll;
+}
+
+.topic_wordlist {
+  font-family: Archer;
+  font-size: 20;
+}
+
+.div_twic_info_docbar {
+  background-color: #002240;
+  border-radius: 15px;
+}
+
+.svg_twic_info_docbar {
+
+  overflow: scroll;
 }
