Adding in full control/title bar support. All panels now have title bars that reflect their content. Scaled corpus clusters by their corpus-level topic proportions and the number of texts within. Re-did all panel divs so that they are now container divs which contain a panel div and control bar div. Redid topic bar div/svg so all is now correctly positioned - this is done by not using the svg viewBox property and instead relying on div.scrollTop for topic highlighting. Also redid panel construction so they now add themselves to the level and levels work with containers and not panels directly. (Panels and their respective control bars do, however, maintain references to one another.)

--- a/css/twic.css
+++ b/css/twic.css
@@ -10,21 +10,21 @@ body {
   min-height: 100%;
 }
 
+.div_twic_control{
+  position:relative;
+  display: block;
+}
+
 .twic_panel {
-  border-radius: 15px;
-  position: absolute;
+  position: relative;
   overflow: auto;
+  display: block;
 }
 
 .div_twic_graph {
   margin-left: auto;
   margin-right: auto;
   overflow: auto;
-  float: left;
-}
-
-.svg_twic_graph {
-  position: absolute;
 }
 
 .group_twic_graph_overlay {
@@ -32,27 +32,18 @@ body {
   pointer-events: all;
 }
 
-.div_twic_graph_corpusclusterview {
-  background-color: #002240;
-}
-
-.div_twic_graph_textclusterview {
-  background-color: white;
-}
-
 .div_twic_info {
   margin-left: auto;
   margin-right: auto;
   overflow: auto;
-  display:inline-block;
-}
-
-.div_twic_info_topicbar {
+  display:inline;
+  border-radius:15px;
   background-color: #002240;
+  position:absolute;
 }
 
 .svg_twic_info {
-  overflow: scroll;
+
 }
 
 .topic_highlightrect {
@@ -63,15 +54,6 @@ body {
   font-family: Archer;
   font-size: 20;
   position: absolute;
-}
-
-.div_twic_info_docbar {
-  background-color: #002240;
-  overflow: auto;
-}
-
-.rect_twic_graph_textclusterview {
-  fill: white;
 }
 
 .left_resizer {
