--- a/css/twic.css
+++ b/css/twic.css
@@ -15,6 +15,11 @@ body {
   display: block;
 }
 
+.div_twic_container {
+  overflow:hidden;
+  resize:both;
+}
+
 .twic_panel {
   position: relative;
   overflow: auto;
@@ -25,6 +30,33 @@ body {
   margin-left: auto;
   margin-right: auto;
   overflow: auto;
+}
+
+.div_twic_graph_corpusview {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.div_twic_graph_corpusclusterview {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.div_twic_graph_textclusterview {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .group_twic_graph_overlay {
@@ -143,4 +175,15 @@ body {
     opacity: .5;
     cursor: nwse-resize;
 }
+
+.d3-tip {
+  line-height: 1;
+  font-family: Archer;
+  font-size: 21;
+  padding: 12px;
+  background: rgba(223,218,196, 0.8);
+  color: #4C2F2E;
+  border-radius: 5px;
+}
+
 
